--- a/gallery/index.html
+++ b/gallery/index.html
@@ -15,6 +15,7 @@
 
     <!-- gallery entries. Can these be auto-loaded? -->
     <script src="annotations.js"></script>
+    <script src="secondary-x-axis.js"></script>
     <script src="drawing.js"></script>
     <script src="dynamic-update.js"></script>
     <script src="highlighted-series.js"></script>
